--- a/kvcounter/rust/Cargo.toml
+++ b/kvcounter/rust/Cargo.toml
@@ -9,10 +9,15 @@ crate-type = ["cdylib", "rlib"]
 name = "{{to_snake_case project-name}}"
 
 [dependencies]
+async-trait = "0.1"
 futures = "0.3"
+serde_bytes = "0.11"
+serde_json ="1.0"
+serde = {version = "1.0", features = ["derive"]}
 
 wasmbus-rpc = "0.11"
-wasmcloud-interface-httpserver = "0.8.2"
+wasmcloud-interface-keyvalue = "0.9"
+wasmcloud-interface-httpserver = "0.8"
 
 [profile.release]
 # Optimize for small code size
