fix: opcode error for projects targeting wasi
opcode error is fixed by
wasmCloud/wascap#39

But that fix must be rolled out with wasmCloud host v0.60 that is in rc.

The templates do not use wasi and this version of
wasi is in preview state and should be intentionally opted into.

--- a/kvcounter/rust/wasmcloud.toml
+++ b/kvcounter/rust/wasmcloud.toml
@@ -4,5 +4,5 @@ type = "actor"
 version = "0.1.0"
 
 [actor]
-wasm_target = "wasm32-wasi"
+wasm_target = "wasm32-unknown-unknown"
 claims = ["wasmcloud:httpserver", "wasmcloud:keyvalue"]
