--- a/kvcounter/rust/Cargo.toml
+++ b/kvcounter/rust/Cargo.toml
@@ -14,10 +14,12 @@ futures = "0.3"
 serde_bytes = "0.11"
 serde_json ="1.0"
 serde = {version = "1.0", features = ["derive"]}
+rust-embed = "6.3.0"
 
 wasmbus-rpc = "0.14"
 wasmcloud-interface-keyvalue = "0.11"
 wasmcloud-interface-httpserver = "0.11"
+wasmcloud-interface-logging= "0.9"
 
 [profile.release]
 # Optimize for small code size
