--- a/kvcounter/rust/.github/workflows/release.yml
+++ b/kvcounter/rust/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Release to GHCR
+name: Release to AzureCR
 on:
   workflow_dispatch:
   push:
@@ -11,9 +11,8 @@ on:
       - "v*"
 env:
   # For the release action, you'll have to set the following variables
-  WASH_ISSUER_KEY: ${{ secrets.WASH_ISSUER_KEY }}
-  WASH_SUBJECT_KEY: ${{ secrets.WASH_SUBJECT_KEY }}
-  WASMCLOUD_PAT: ${{ secrets.WASMCLOUD_PAT }}
+  WASH_ISSUER_KEY: ${{ secrets.COSMONIC_ACCOUNT_OFFICIAL }}
+  WASH_SUBJECT_KEY: ${{ secrets.AWESOME_COSMONIC_KVCOUNTER_KEY }}
 jobs:
   build_signed_actor:
     runs-on: ubuntu-latest
@@ -37,36 +36,6 @@ jobs:
           name: wasmcloud-actor
           path: build/*.wasm
 
-  github_release:
-    if: startswith(github.ref, 'refs/tags/') # Only run on tag push
-    needs: build_signed_actor
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: wasmcloud/common-actions/install-wash@main
-      - name: Download signed actor
-        uses: actions/download-artifact@v2
-        with:
-          name: wasmcloud-actor
-          path: build
-      - name: Create release text
-        run: |
-          export oci_version=$(cargo metadata --no-deps --format-version 1 | jq -r '.packages[].version')
-          export claims=$(wash claims inspect build/*.wasm)
-          echo "Your actor can be accessed at \`ghcr.io/${{ github.REPOSITORY }}:$oci_version\`" >> release.txt
-          echo "Claims information:" >> release.txt
-          echo "\`\`\`" >> release.txt
-          echo "$claims" >> release.txt
-          echo "\`\`\`" >> release.txt
-      - name: Release
-        uses: softprops/action-gh-release@v1
-        with:
-          files: build/*.wasm
-          token: ${{ env.WASMCLOUD_PAT }}
-          body_path: release.txt
-          prerelease: false
-          draft: false
-
   artifact_release:
     needs: build_signed_actor
     runs-on: ubuntu-latest
@@ -89,9 +58,12 @@ jobs:
         if: ${{ !startswith(github.ref, 'refs/tags/') }}
         run: |
           echo "actor-version=latest" >> $GITHUB_ENV
-      - name: Push actor to GHCR
-        env:
-          WASH_REG_USER: ${{ github.repository_owner }}
-          WASH_REG_PASSWORD: ${{ secrets.WASMCLOUD_PAT }}
-        run: |
-          wash reg push ghcr.io/${{ github.REPOSITORY }}:${{ env.actor-version }} build/${{ env.actor-name }}_s.wasm -a org.opencontainers.image.source=https://github.com/${{ github.REPOSITORY }} --allow-latest
+      - name: Push actor to AzureCR
+        uses: .wasmcloud/common-actions/oci-artifact-release@main
+        with:
+          artifact-path: build/${{ env.actor-name }}_s.wasm
+          oci-url: ${{ secrets.AZURECR_PUSH_URL }}   
+          oci-repository: ${{ env.actor-name }}
+          oci-version: ${{ env.actor-version }}
+          oci-username: ${{ secrets.COSMONIC_AZURECR_PUSH_USER }}
+          oci-password: ${{ secrets.COSMONIC_AZURECR_PUSH_PASSWORD }}
