--- a/.github/workflows/build-kvcounter.yml
+++ b/.github/workflows/build-kvcounter.yml
@@ -3,8 +3,10 @@ on:
   pull_request:
     branches: [main]
     paths:
-      - "src/**"
-      - "Cargo.*"
+      - "kvcounter/rust/**"
+
+env:
+  working-directory: "./kvcounter/rust"
 jobs:
   build_and_test:
     runs-on: ubuntu-latest
@@ -15,13 +17,17 @@ jobs:
       - name: Check formatting
         run: cargo fmt -- --check
         shell: bash
+        working-directory: ${{ env.working-directory }}
       - name: Build actor
         run: cargo build
+        working-directory: ${{ env.working-directory }}
       - name: Check lints with clippy
         run: |
           rustup component add clippy
           cargo clippy
+        working-directory: ${{ env.working-directory }}
       # Once you've written unit tests for your actor, you can uncomment
       # the two lines below to automatically run tests
       # - name: Test actor
       #   run: cargo test --target x86_64-unknown-linux-gnu -- --nocapture
+      #   working-directory: ${{ env.working-directory }}
