--- a/.github/workflows/release-hello-world.yml
+++ b/.github/workflows/release-hello-world.yml
@@ -21,6 +21,8 @@ jobs:
       - name: Add wasm32-unknown-unknown
         run: rustup target add wasm32-unknown-unknown
         working-directory: ${{ env.working-directory }}/rust
+      - name: Install cosmo
+        run: bash -c "$(curl -fsSL https://cosmonic.sh/install.sh)"
       # Once you've written unit tests for your actor, you can uncomment
       # the two lines below to automatically run tests
       # - name: Test actor
