Switched to wash instead of cosmo
Signed-off-by: aish-where-ya <aharpale@cosmonic.com>

--- a/.github/workflows/release-hello-world.yml
+++ b/.github/workflows/release-hello-world.yml
@@ -21,11 +21,6 @@ jobs:
       - name: Add wasm32-unknown-unknown
         run: rustup target add wasm32-unknown-unknown
         working-directory: ${{ env.working-directory }}/rust
-      - name: Install cosmo
-        run: |
-            bash -c "$(curl -fsSL https://cosmonic.sh/install.sh)"
-            echo "export PATH=\"/home/runner/.cosmo/bin:\${PATH}\"" >> "${HOME}/.bashrc" && source "${HOME}/.bashrc" >> $GITHUB_ENV
-        shell: bash
       # Once you've written unit tests for your actor, you can uncomment
       # the two lines below to automatically run tests
       # - name: Test actor
@@ -35,8 +30,8 @@ jobs:
           WASH_ISSUER_KEY: ${{ env.WASH_ISSUER_KEY }}
           WASH_SUBJECT_KEY: ${{ env.WASH_SUBJECT_KEY }}
         run: |
-            cosmo new actor --path rust hello
-            cd hello && cosmo build
+            wash new actor --path rust hello
+            cd hello && wash build
             mkdir -p ${{ env.working-directory }}/rust/build
             cp ${{ env.working-directory }}/hello/build/hello.wasm ${{ env.working-directory }}/rust/build/hello.wasm
             rm -rf hello
