--- a/.github/workflows/release-kvcounter.yml
+++ b/.github/workflows/release-kvcounter.yml
@@ -1,4 +1,4 @@
-name: Release to AzureCR
+name: Release KVCounter to AzureCR
 on:
   workflow_dispatch:
   push:
@@ -21,8 +21,6 @@ jobs:
       - name: Add wasm32-unknown-unknown
         run: rustup target add wasm32-unknown-unknown
         working-directory: ${{ env.working-directory }}/rust
-      - name: Install cosmo
-        run: bash -c "$(curl -fsSL https://cosmonic.sh/install.sh)"
       # Once you've written unit tests for your actor, you can uncomment
       # the two lines below to automatically run tests
       # - name: Test actor
@@ -31,7 +29,13 @@ jobs:
         env:
           WASH_ISSUER_KEY: ${{ env.WASH_ISSUER_KEY }}
           WASH_SUBJECT_KEY: ${{ env.WASH_SUBJECT_KEY }}
-        run: make
+        run: |
+            wash new actor --path rust kvcounter
+            wash build -p kvcounter
+            mkdir -p ${{ env.working-directory }}/rust/build
+            cp ${{ env.working-directory }}/kvcounter/build/kvcounter.wasm ${{ env.working-directory }}/rust/build/kvcounter.wasm
+            rm -rf kvcounter
+        shell: bash
         working-directory: ${{ env.working-directory }}
       - name: Upload signed actor to GH Actions
         uses: actions/upload-artifact@v2
