--- a/.github/workflows/release-hello-world.yml
+++ b/.github/workflows/release-hello-world.yml
@@ -30,18 +30,17 @@ jobs:
           WASH_ISSUER_KEY: ${{ env.WASH_ISSUER_KEY }}
           WASH_SUBJECT_KEY: ${{ env.WASH_SUBJECT_KEY }}
         run: |
-            wash new actor --path ${{ env.working-directory }}/rust hello
-            cd hello && wash build
-            mkdir -p ${{ env.working-directory }}/rust/build
-            cp ${{ env.working-directory }}/hello/build/hello.wasm ${{ env.working-directory }}/rust/build/hello.wasm
-            rm -rf hello
+            wash new actor --path rust hello
+            cd hello && wash build    
         shell: bash
         working-directory: ${{ env.working-directory }}
       - name: Upload signed actor to GH Actions
         uses: actions/upload-artifact@v3
         with:
           name: wasmcloud-actor
-          path: ${{ env.working-directory }}/rust/build/*.wasm
+          path: ${{ env.working-directory }}/hello/build/*_s.wasm
+      - name: Remove project
+        run: rm -rf ${{ env.working-directory }}/hello
 
   artifact_release:
     needs: build_signed_actor
