--- a/.github/workflows/release-kvcounter.yml
+++ b/.github/workflows/release-kvcounter.yml
@@ -30,18 +30,17 @@ jobs:
           WASH_ISSUER_KEY: ${{ env.WASH_ISSUER_KEY }}
           WASH_SUBJECT_KEY: ${{ env.WASH_SUBJECT_KEY }}
         run: |
-            wash new actor --path ${{ env.working-directory }}/rust kvcounter
+            wash new actor --path rust kvcounter
             wash build -p kvcounter
-            mkdir -p ${{ env.working-directory }}/rust/build
-            cp ${{ env.working-directory }}/kvcounter/build/kvcounter.wasm ${{ env.working-directory }}/rust/build/kvcounter.wasm
-            rm -rf kvcounter
         shell: bash
         working-directory: ${{ env.working-directory }}
       - name: Upload signed actor to GH Actions
         uses: actions/upload-artifact@v3
         with:
           name: wasmcloud-actor
-          path: ${{ env.working-directory }}/rust/build/*.wasm
+          path: ${{ env.working-directory }}/rust/build/*_s.wasm
+      - name: Remove project
+        run: rm -rf ${{ env.working-directory }}/kvcounter
 
   artifact_release:
     needs: build_signed_actor
