--- a/.github/workflows/release-kvcounter.yml
+++ b/.github/workflows/release-kvcounter.yml
@@ -38,9 +38,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: wasmcloud-actor
-          path: ${{ env.working-directory }}/rust/build/*_s.wasm
-      - name: Remove project
-        run: rm -rf ${{ env.working-directory }}/kvcounter
+          path: ${{ env.working-directory }}/kvcounter/build/*_s.wasm
 
   artifact_release:
     needs: build_signed_actor
@@ -56,17 +54,17 @@ jobs:
       - name: Determine actor name
         run: |
           echo "actor-name=$(cargo metadata --no-deps --format-version 1 | jq -r '.packages[].name')" >> $GITHUB_ENV
-        working-directory: ${{ env.working-directory }}/rust
+        working-directory: ${{ env.working-directory }}/kvcounter
       - name: Determine actor version
         if: startswith(github.ref, 'refs/tags/') # Only run on tag push
         run: |
           echo "actor-version=$(cargo metadata --no-deps --format-version 1 | jq -r '.packages[].version')" >> $GITHUB_ENV
-        working-directory: ${{ env.working-directory }}/rust
+        working-directory: ${{ env.working-directory }}/kvcounter
       - name: Determine actor version (main)
         if: ${{ !startswith(github.ref, 'refs/tags/') }}
         run: |
           echo "actor-version=latest" >> $GITHUB_ENV
-        working-directory: ${{ env.working-directory }}/rust
+        working-directory: ${{ env.working-directory }}/kvcounter
       - name: Push actor to AzureCR
         uses: wasmcloud/common-actions/oci-artifact-release@main
         with:
