--- a/hello-world/rust/Cargo.toml
+++ b/hello-world/rust/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "{{project-name}}"
+name = "helloworld"
 version = "0.1.0"
 authors = [ "" ]
 edition = "2021"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
-name = "{{to_snake_case project-name}}"
+name = "helloworld"
 
 [dependencies]
 futures = "0.3"
