--- a/.github/workflows/release-hello-world.yml
+++ b/.github/workflows/release-hello-world.yml
@@ -6,7 +6,7 @@ on:
     paths:
       - "hello-world/**"
     tags:
-      - "v*"
+      - "hello-world-v*"
 env:
   # For the release action, you'll have to set the following variables
   WASH_ISSUER_KEY: ${{ secrets.COSMONIC_ACCOUNT_OFFICIAL }}
