--- a/kvcounter/rust/Cargo.toml
+++ b/kvcounter/rust/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "kvcounter"
+name = "{{project-name}}"
 version = "0.1.0"
 authors = [ "" ]
 edition = "2021"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
-name = "kvcounter"
+name = "{{to_snake_case project-name}}"
 
 [dependencies]
 async-trait = "0.1"
