--- a/.github/workflows/release-hello-world.yml
+++ b/.github/workflows/release-hello-world.yml
@@ -29,14 +29,18 @@ jobs:
         env:
           WASH_ISSUER_KEY: ${{ env.WASH_ISSUER_KEY }}
           WASH_SUBJECT_KEY: ${{ env.WASH_SUBJECT_KEY }}
-        run: make    
+        run: |
+          wash new actor --path rust hello
+          wash build -p hello
+          mkdir -p ./rust/build
+          cp hello/build/hello.wasm ./rust/build/hello.wasm    
         shell: bash
         working-directory: ${{ env.working-directory }}
       - name: Upload signed actor to GH Actions
         uses: actions/upload-artifact@v3
         with:
           name: wasmcloud-actor
-          path: ${{ env.working-directory }}/hello/build/*_s.wasm
+          path: ${{ env.working-directory }}/rust/build/*.wasm
       - name: Remove project
         run: rm -rf ${{ env.working-directory }}/hello
 
