--- a/.github/workflows/release-kvcounter.yml
+++ b/.github/workflows/release-kvcounter.yml
@@ -29,14 +29,18 @@ jobs:
         env:
           WASH_ISSUER_KEY: ${{ env.WASH_ISSUER_KEY }}
           WASH_SUBJECT_KEY: ${{ env.WASH_SUBJECT_KEY }}
-        run: make
+        run: |
+          wash new actor --path rust kvcounter
+          wash build -p kvcounter
+          mkdir -p ./rust/build
+          cp kvcounter/build/kvcounter.wasm ./rust/build/kvcounter.wasm
         shell: bash
         working-directory: ${{ env.working-directory }}
       - name: Upload signed actor to GH Actions
         uses: actions/upload-artifact@v3
         with:
           name: wasmcloud-actor
-          path: ${{ env.working-directory }}/kvcounter/build/*_s.wasm
+          path: ${{ env.working-directory }}/rust/build/*.wasm
       - name: Remove project
         run: rm -rf ${{ env.working-directory }}/kvcounter
 
