--- a/.github/workflows/release-kvcounter.yml
+++ b/.github/workflows/release-kvcounter.yml
@@ -32,15 +32,13 @@ jobs:
         run: |
           wash new actor --path rust kvcounter
           wash build -p kvcounter
-          mkdir -p ./rust/build
-          cp kvcounter/build/kvcounter.wasm ./rust/build/kvcounter.wasm
         shell: bash
         working-directory: ${{ env.working-directory }}
       - name: Upload signed actor to GH Actions
         uses: actions/upload-artifact@v3
         with:
           name: wasmcloud-actor
-          path: ${{ env.working-directory }}/rust/build/*.wasm
+          path: ${{ env.working-directory }}/hello
 
   artifact_release:
     needs: build_signed_actor
@@ -52,7 +50,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: wasmcloud-actor
-          path: ${{ env.working-directory }}/rust/build
+          path: ${{ env.working-directory }}
       - name: Determine actor name
         run: |
           echo "actor-name=$(cargo metadata --no-deps --format-version 1 | jq -r '.packages[].name')" >> $GITHUB_ENV
@@ -70,7 +68,7 @@ jobs:
       - name: Push actor to AzureCR
         uses: wasmcloud/common-actions/oci-artifact-release@main
         with:
-          artifact-path: ${{ env.working-directory }}/rust/build/${{ env.actor-name }}_s.wasm
+          artifact-path: ${{ env.working-directory }}/kvcounter/build/${{ env.actor-name }}_s.wasm
           oci-url: ${{ secrets.AZURECR_PUSH_URL }}   
           oci-repository: ${{ env.actor-name }}
           oci-version: ${{ env.actor-version }}
