--- a/.github/workflows/release-hello-world.yml
+++ b/.github/workflows/release-hello-world.yml
@@ -50,11 +50,12 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: wasmcloud-actor
-          path: ${{ env.working-directory }}
+          path: ${{ env.working-directory }}/hello
       - name: Determine actor name
         run: |
+          find *
           echo "actor-name=$(cargo metadata --no-deps --format-version 1 | jq -r '.packages[].name')" >> $GITHUB_ENV
-        working-directory: ${{ env.working-directory }}/hello
+        working-directory: ${{ env.working-directory }}
       - name: Determine actor version
         if: startswith(github.ref, 'refs/tags/') # Only run on tag push
         run: |
