--- a/.github/workflows/release-hello-world.yml
+++ b/.github/workflows/release-hello-world.yml
@@ -32,6 +32,7 @@ jobs:
         run: |
           wash new actor --path rust hello
           wash build -p hello
+          rm -rf hello/target
         shell: bash
         working-directory: ${{ env.working-directory }}
       - name: Upload signed actor to GH Actions
@@ -55,7 +56,7 @@ jobs:
         run: |
           find *
           echo "actor-name=$(cargo metadata --no-deps --format-version 1 | jq -r '.packages[].name')" >> $GITHUB_ENV
-        working-directory: ${{ env.working-directory }}
+        working-directory: ${{ env.working-directory }}/hello
       - name: Determine actor version
         if: startswith(github.ref, 'refs/tags/') # Only run on tag push
         run: |
