--- a/.github/workflows/release-kvcounter.yml
+++ b/.github/workflows/release-kvcounter.yml
@@ -62,6 +62,7 @@ jobs:
         working-directory: ${{ env.working-directory }}
       - name: Determine actor name
         run: |
+          find *
           echo "actor-name=$(cargo metadata --no-deps --format-version 1 | jq -r '.packages[].name')" >> $GITHUB_ENV
         working-directory: ${{ env.working-directory }}/kvcounter
       - name: Determine actor version
