--- a/.github/workflows/release-hello-world.yml
+++ b/.github/workflows/release-hello-world.yml
@@ -55,9 +55,7 @@ jobs:
           name: wasmcloud-actor
           path: ${{ env.working-directory }}
       - name: Extract files from tar file
-        run: |
-          mkdir -p ${{ env.working-directory }}/hello
-          tar -xvf hello.tar -C ${{ env.working-directory }}/hello
+        run: tar -xvf hello.tar
         shell: bash
         working-directory: ${{ env.working-directory }}
       - name: Determine actor name
