Fix build pipelines for hello world and kvcounter Edit release tags for the same
Signed-off-by: aish-where-ya <aharpale@cosmonic.com>

--- a/.github/workflows/build-hello-world.yml
+++ b/.github/workflows/build-hello-world.yml
@@ -6,26 +6,30 @@ on:
       - "hello-world/rust/**"
 
 env:
-  working-directory: "./hello-world/rust"
+  working-directory: "./hello-world"
 jobs:
   build_and_test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - uses: wasmcloud/common-actions/install-wash@main
       - name: Add wasm32-unknown-unknown
         run: rustup target add wasm32-unknown-unknown
+      - name: Build actor
+        run: |
+          wash new actor --path rust hello
+          wash build -p hello
+        working-directory: ${{ env.working-directory }}
       - name: Check formatting
         run: cargo fmt -- --check
         shell: bash
-        working-directory: ${{ env.working-directory }}
-      - name: Build actor
-        run: cargo build
-        working-directory: ${{ env.working-directory }}
+        working-directory: ${{ env.working-directory }}/hello
+      
       - name: Check lints with clippy
         run: |
           rustup component add clippy
           cargo clippy
-        working-directory: ${{ env.working-directory }}
+        working-directory: ${{ env.working-directory }}/hello
       # Once you've written unit tests for your actor, you can uncomment
       # the two lines below to automatically run tests
       # - name: Test actor
