--- a/.github/workflows/build-xkcdgenerator.yml
+++ b/.github/workflows/build-xkcdgenerator.yml
@@ -1,27 +1,28 @@
-name: Build and test
+name: Build and test XKCDGenerator
 on:
   pull_request:
     branches: [main]
     paths:
-      - "src/**"
-      - "Cargo.*"
+      - "xkcdgenerator/**"
+
+env:
+  working-directory: "./xkcdgenerator"
 jobs:
   build_and_test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Add wasm32-unknown-unknown
         run: rustup target add wasm32-unknown-unknown
       - name: Check formatting
         run: cargo fmt -- --check
         shell: bash
+        working-directory: ${{ env.working-directory }}
       - name: Build actor
         run: cargo build
+        working-directory: ${{ env.working-directory }}
       - name: Check lints with clippy
         run: |
           rustup component add clippy
           cargo clippy
-      # Once you've written unit tests for your actor, you can uncomment
-      # the two lines below to automatically run tests
-      # - name: Test actor
-      #   run: cargo test --target x86_64-unknown-linux-gnu -- --nocapture
+        working-directory: ${{ env.working-directory }}
