fix(wadm): update manifests to use .yaml and build assets

--- a/hello-world/hello-cosmonic.wadm.yaml
+++ b/hello-world/hello-cosmonic.wadm.yaml
@@ -1,34 +1,28 @@
 # This is a full example of how to run the hello actor exposed with an HTTP server on Cosmonic. 
 # This example leverages WADM running: https://github.com/wasmCloud/wadm/tree/main/wadm.
 #
-# This example starts a webserver on Cosmonic and runs the hello world on a remote host.
-# See other examples for different scenarios.
+# All components are started on Cosmonic.  See other examples for different scenarios.
 
 apiVersion: core.oam.dev/v1beta1
 kind: Application
 metadata:
   name: hello
   annotations:
-    version: v0.0.1-stargate
+    version: v1.0.0-cosmonic
     description: "Cosmonic Hello World Example"
 spec:
   components:
     - name: hello
       type: actor
       properties:
-        image: wasmcloud.azurecr.io/hello:0.1.7
+        image: cosmonic.azurecr.io/hello:0.1.0
       traits:
-        - properties:
+        - type: spreadscaler
+          properties:
             replicas: 1
-            spread:
-              - name: stargate
-                requirements:
-#                  hostcore.os: macos
-                  stargate: 'true'
-          type: spreadscaler
-        - properties:
+        - type: linkdef
+          properties:
             target: httpserver
-          type: linkdef
     - name: httpserver
       properties:
         contract: wasmcloud:httpserver
