--- a/hello-world/hello-stargate.wadm.yaml
+++ b/hello-world/hello-stargate.wadm.yaml
@@ -1,28 +1,34 @@
 # This is a full example of how to run the hello actor exposed with an HTTP server on Cosmonic. 
 # This example leverages WADM running: https://github.com/wasmCloud/wadm/tree/main/wadm.
 #
-# All components are started on Cosmonic.  See other examples for different scenarios.
+# This example starts a webserver on Cosmonic and runs the hello world on a remote host.
+# See other examples for different scenarios.
 
 apiVersion: core.oam.dev/v1beta1
 kind: Application
 metadata:
   name: hello
   annotations:
-    version: v0.0.1-cosmonic
+    version: v1.0.0-stargate
     description: "Cosmonic Hello World Example"
 spec:
   components:
     - name: hello
       type: actor
       properties:
-        image: wasmcloud.azurecr.io/hello:0.1.7
+        image: cosmonic.azurecr.io/hello:0.1.0
       traits:
-        - type: spreadscaler
-          properties:
+        - properties:
             replicas: 1
-        - type: linkdef
-          properties:
+            spread:
+              - name: stargate
+                requirements:
+#                  hostcore.os: macos
+                  stargate: 'true'
+          type: spreadscaler
+        - properties:
             target: httpserver
+          type: linkdef
     - name: httpserver
       properties:
         contract: wasmcloud:httpserver
